--- a/index.html
+++ b/index.html
@@ -197,6 +197,348 @@
         </div>
     </section>
 
+    <!-- ------------------------------- -->
+    <!--              MEET PEOPLE        -->
+    <!-- ------------------------------- -->
+
+    <section id="people" class=" py-5">
+
+        <div class="people-header text-white text-center">
+            <em>Creative Barista</em>
+            <h1>MEET PEOPLE</h1>
+        </div>
+
+        <div class="container">
+            <div class="row py-5 row-gap-3 justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Aragorn</h5>
+                            <h6>Menager</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Arondir</h5>
+                            <h6>Senior</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Arwen</h5>
+                            <h6>Executive Chef</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bilbo</h5>
+                            <h6>Barista</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bronwyn</h5>
+                            <h6>Chef</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/team/our-team-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Legolas</h5>
+                            <h6>Waiter</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="socials fs-4 d-flex justify-content-evenly">
+                                <i class="bi bi-linkedin"></i>
+                                <i class="bi bi-twitter-x"></i>
+                                <i class="bi bi-instagram"></i>
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <!-- ------------------------------- -->
+    <!--            OUR MENU             -->
+    <!-- ------------------------------- -->
+
+
+    <section id="menu" class="py-5">
+        <div class="menu-header text-center">
+            <h1 class="py-5">OUR MENU</h1>
+        </div>
+
+        <div class="container py-5 rounded-3">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
+                        data-bs-target="#pills-coffee" type="button" role="tab" aria-controls="pills-home"
+                        aria-selected="true">Coffee</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-food"
+                        type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Food</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                        data-bs-target="#pills-dessert" type="button" role="tab" aria-controls="pills-contact"
+                        aria-selected="false">Dessert</button>
+                </li>
+
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-coffee" role="tabpanel"
+                    aria-labelledby="pills-home-tab" tabindex="0">
+                    <div class="row row-gap-3">
+                        <div class="col-12 col-md-6 col-lg-3">
+
+                            <a data-fslightbox href="./img/menu/coffee/1_dalgona.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/coffee/1_dalgona.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Dalgona</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/coffee/2_turkısh.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/coffee/2_turkısh.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Turkish</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/coffee/3_latte.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/coffee/3_latte.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Latte</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/coffee/4_magic.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/coffee/4_magic.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Magic</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="pills-food" role="tabpanel" aria-labelledby="pills-profile-tab"
+                    tabindex="0">
+                    <div class="row row-gap-3">
+                        <div class="col-12 col-md-6 col-lg-3">
+
+                            <a data-fslightbox href="./img/menu/food/1_steak.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/food/1_steak.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Steak</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/food/2_italian.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/food/2_italian.webp" alt="">
+                            </a>
+                            <h6 class="text-center fs-4">İtalian</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/food/3_summer-squash-pizza.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/food/3_summer-squash-pizza.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Squash Pizza</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/food/4_peanut-butter.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/food/4_peanut-butter.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Peanut Toast</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="pills-dessert" role="tabpanel" aria-labelledby="pills-contact-tab"
+                    tabindex="0">
+                    <div class="row row-gap-3">
+                        <div class="col-12 col-md-6 col-lg-3">
+
+                            <a data-fslightbox href="./img/menu/dessert/1_corn-cake.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/dessert/1_corn-cake.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Corn Cake</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/dessert/2_gigerbread.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/dessert/2_gigerbread.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Gingerbread Cake</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/dessert/3_Grape_almond.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/dessert/3_Grape_almond.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Grape Almond</h6>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <a data-fslightbox href="./img/menu/dessert/4_LemonMeringue.webp">
+                                <img class="img-thumbnail" width="100%" src="./img/menu/dessert/4_LemonMeringue.webp"
+                                    alt="">
+                            </a>
+                            <h6 class="text-center fs-4">Lemon Meringue</h6>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+
+    <!-- ------------------------------- -->
+    <!--             CONTACT             -->
+    <!-- ------------------------------- -->
+
+
+    <section id="contact" class="py-5">
+        <div class="contact-header text-center text-white">
+            <h1 class="py-5">CONTACT</h1>
+        </div>
+
+        <div class="container">
+            <div class="row align-items-center row-gap-5">
+                <div class="col-12 col-lg-6 form-container">
+                    <form class="row g-3">
+                        <div class="col-md-6 ">
+                            <label for="inputEmail4" class="form-label fst-italic text-white">Name</label>
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Harvey">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="form-label fst-italic text-white">Email</label>
+                            <input type="email" class="form-control" id="inputPassword4"
+                                placeholder="harvey@clarusway.com">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress" class="form-label fst-italic text-white">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Barcelona">
+                        </div>
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Leave a comment here"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Enter your Comments</label>
+                        </div>
+
+                    </form>
+                </div>
+                <div class="col-12 col-lg-6 order-1 location">
+                    <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d114332.30117731099!2d-96.57441064914843!3d32.86161313001312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1708371518774!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
+    <!-- ------------------------------- -->
+    <!--             Footer              -->
+    <!-- ------------------------------- -->
+
+    <footer class=" text-dark">
+
+        <div class="container">
+            <div class="row row-gap-3">
+                <div class="col-12 col-lg-4 d-flex flex-column  gap-3">
+                    <p><em>Where to find us?</em></p>
+
+                    <a href="" class="text-dark">
+                        <i class="bi bi-geo-alt"></i>
+                        224 Park Drive Gotham City.
+                    </a>
+
+                    <div class="social-icons fs-4 d-flex gap-5">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-twitter-x"></i>
+                        <i class="bi bi-whatsapp"></i>
+                    </div>
+
+                </div>
+                <div class="col-12 col-lg-4">
+                    <p><em>Contact</em></p>
+                    <p><strong>Phone:</strong>(+90)5555555555</p>
+                    <p><strong>Email:</strong>harvey@clarusway.com</p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <p><em>Opening Hours</em></p>
+                    <p>Monday-Friday_______9:00 - 18:00</p>
+                    <p>Sturday_____________11:00 - 16:30</p>
+                    <p>Sunday______________Closed</p>
+                </div>
+
+                <div class="col-12">
+                    <p>Copyright &copy Harvey Watson</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    </footer>
+
 
 
 
